--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
 name = "stashit"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2018"
 
 [dependencies]
 chrono = "0.4"
 home = "0.5.3"
+clap = "*"
