--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
 name = "stashit"
-version = "0.2.1"
+version = "0.2.2"
 edition = "2018"
 
 [dependencies]
 chrono = "0.4"
 home = "0.5.3"
 clap = "*"
+serde_json = "1.0"
