--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,38 +1,54 @@
-on: [push, pull_request]
+name: CI
 
-name: Cross-compile
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+
+env:
+  CARGO_TERM_COLOR: always
 
 jobs:
-  build:
-    name: Build Linux
-    runs-on: ubuntu-latest
+  build-test:
     strategy:
+      fail-fast: false
+
       matrix:
-        target:
-          - x86_64-unknown-linux-gnu
+        os:
+          - { prettyname: Windows, fullname: windows-latest }
+          - { prettyname: macOS, fullname: macos-latest }
+          - { prettyname: Linux, fullname: ubuntu-latest }
+
+        threadingMode: [ 'MultiThreaded' ]
+
+    timeout-minutes: 60
+
+    runs-on: ${{matrix.os.fullname}}
+
     steps:
       - uses: actions/checkout@v2
-      - uses: icepuma/rust-action@master
-      - uses: actions/create-release@v1
-        with:
-          toolchain: stable
-          target: ${{ matrix.target }}
-          override: true
-      - uses: actions-rs/cargo@v1
-        with:
-          use-cross: true
-          command: build
-          args: --release --target=${{ matrix.target }}
 
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
-          body: |
-            Changes in this Release
-            - First Change
-            - Second Change
-          draft: false
-          prerelease: false
+      - name: Build
+        run: cargo build --verbose
 
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
-          
+      - name: Run tests
+        run: cargo test --verbose
+
+  lint:
+    name: Formatter
+
+    needs: build-test
+
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Install Rust
+        run: |
+          rustup update stable
+          rustup default stable
+          rustup component add rustfmt
+      - name: Check Formatting
+        run: cargo fmt --all -- --check
